--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
     "passport-github2": "^0.1.12",
     "passport-local": "^1.0.0",
     "pg": "^8.14.1"
+  },
+  "devDependencies": {
+    "jest": "^29.7.0"
   }
 }
